--- a/app/views/authors/edit.html.erb
+++ b/app/views/authors/edit.html.erb
@@ -1,4 +1,4 @@
-<h2>Create an Author</h2>
+<h1>Edit An Author</h1>
 
 <% if @author.errors.any? %>
   <div id="error_explanation">
@@ -12,21 +12,22 @@
   <br>
 <% end %>
 
-<%= form_tag authors_path, method: "post" do %>
+<%= form_tag author_path(@author), method: "patch" do %>
   <div class="field<%= ' field_with_errors' if @author.errors[:name].any? %>">
     <%= label_tag "name", "Name" %>
-    <%= text_field_tag "name", @author.name %>
+    <%= text_field_tag "name", @author.name %> 
   </div>
 
   <div class="field<%= ' field_with_errors' if @author.errors[:email].any? %>">
     <%= label_tag "email", "Email" %>
-    <%= text_field_tag "email", @author.email %>
+    <%= text_field_tag "email", @author.email %> 
   </div>
 
   <div class="field<%= ' field_with_errors' if @author.errors[:phone_number].any? %>">
     <%= label_tag "phone_number", "Phone Number" %>
-    <%= text_field_tag "phone_number", @author.phone_number %>
+    <%= text_field_tag "phone_number", @author.phone_number %> 
   </div>
 
-  <%= submit_tag "Create" %>
+  <%= submit_tag "Submit" %>
+  
 <% end %>
